syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.ot6";
option java_outer_classname = "PixKeymanager";
option objc_class_prefix = "HLW";

package br.com.ot6;

service PixKeymanagerRegisterService {
  rpc register(NewPixKeyRequest) returns (NewPixKeyResponse) {}
}

service PixKeymanagerDeleteService {
  rpc delete(DeletePixKeyRequest) returns (DeletePixKeyResponse) {}
}

enum KeyType {
  UNKNOWN_KEY_TYPE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum AccountType {
  UNKNOWN_ACCOUNT_TYPE = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message NewPixKeyRequest {
  string id = 1;
  KeyType keyType = 2;
  string keyValue = 3;
  AccountType accountType = 4;
}

message NewPixKeyResponse {
  string clientId = 1;
  string pixId = 2;
}

message DeletePixKeyRequest {
  string clientId = 1;
  string pixId = 2;
}

message DeletePixKeyResponse {
  string clientId = 1;
  string pixId = 2;
}